# pipeline-manager

./: .gitlab-ci.yml  README.md  dev.py  pyproject.toml  requirements.txt
src/pipeline_manager/: __main__.py  cli.py  data.py  gitlab_api.py  mappers.py
src/pipeline_manager/components/: pills.py  pipeline_author.py  pipeline_info.py  pipeline_jobs_preview.py  pipeline_list.py  pipeline_list_item.py  pipeline_timings.py
src/pipeline_manager/components/image/: __init__.py  widget.py
