[project]
name = "pipeline-manager"
authors = [{ name = "hamolicious", email = "hamolicious@hamolicious.net" }]
description = "Manage Gitlab pipelines from within the CLI!"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
pipeline-manager = "src.pipeline_manager.__main__:main" # function "main()"

[tool.hatch.version]
path = "src/pipeline_manager/__init__.py"

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

